--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./gameengine.js"></script>
     <script type="text/javascript" src="./util.js"></script>
     <script type="text/javascript" src="./animator.js"></script>
+    <script type="text/javascript" src="./MarkovChain.js"></script>
     <script type="text/javascript" src="./Player.js"></script>
     <script type="text/javascript" src="./Enemy.js"></script>
     <script type="text/javascript" src="./EnemyManager.js"></script>
